# Flask-Python-E-Commerce-Website

./: .gitignore  application.py  cd-webserver.yaml.backup  ci-webserver.yaml.bakup  pyproject.toml  requirements.txt  sonar-project.properties  ¨!
.github/workflows/: cd-webserver.yaml  ci-webserver.yaml
tests/: test_app.py
tests/integration/: test_workflow.py
