[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-commerce"
version = "0.2.93"
description = "Ecommerce Feed"
authors = [ { name = "Taher Al Saegh", email = "taher.alsaegh@edu.tbz.ch" } ]
dependencies = [ "requests>=2.25.0" ]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://dev.azure.com/taheralsaegh/DevOps-HF"
Repository = "https://dev.azure.com/taheralsaegh/DevOps-HF/_git/my-python-package"

[tool.setuptools]
py-modules = ["application", "wsgi"]
