[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e-commerce"
version = "0.4.5"
description = "Ecommerce Flask Web Application"
authors = [{ name = "Taher Al Saegh", email = "taher.alsaegh@edu.tbz.ch" }]
requires-python = ">=3.9"

dependencies = [
    "Flask>=3.0.0",
    "Flask-Session",
    "gunicorn>=21.0.0",
    "requests>=2.25.0",
    "sqlalchemy>=2.0.0",
    "cs50>=9.2.0",
    "itsdangerous>=2.1.0",
    "Jinja2>=3.1.0",
    "Werkzeug>=3.0.0",
    "mysqlclient"
]

[project.urls]
Homepage = "https://dev.azure.com/taheralsaegh/DevOps-HF"
Repository = "https://dev.azure.com/taheralsaegh/DevOps-HF/_git/my-python-package"

[tool.setuptools]
py-modules = ["application", "wsgi"]
include-package-data = true
packages = ["e_commerce"]

[tool.setuptools.package-data]
e_commerce = ["templates/**/*.html", "static/**/*"]
